src/objects/CBL_Farm__c.object
<CustomObject>
    <fields>
        <fullName>plague_DiseaseControlEquipmt__c</fullName>
        <label>plague&amp;DiseaseControlEquipmt</label>
        <picklist>
            <picklistValues>
                <fullName>Equipo/traje de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bomba de mochila/Espalda motorizada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bomba de mochila/Espalda manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juego de diferentes boqillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>plantedNewAreas__c</fullName>
        <label>plantedNewAreas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>prodLastHarvestUnits__c</fullName>
        <label>prodLastHarvestUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Arrobas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogramos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quintales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>productionContaminationRisk__c</fullName>
        <label>productionContaminationRisk</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>productionLastHarvest__c</fullName>
        <label>productionLastHarvest</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>productsSoilTreatment__c</fullName>
        <label>productsSoilTreatment</label>
        <picklist>
            <picklistValues>
                <fullName>Sulfato de calcio CaCo-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cal Dolomítica CaCo-MgCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnesita MgCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrical CaCo-MgCo-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>promotesFloraAndFaunaPreservation__c</fullName>
        <label>promotesFloraAndFaunaPreservation</label>
        <picklist>
            <picklistValues>
                <fullName>Si se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneAreaLastYearUnits__c</fullName>
        <label>pruneAreaLastYearUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneAreaLastyear__c</fullName>
        <label>pruneAreaLastyear</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pruneLastYear__c</fullName>
        <label>pruneLastYear</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneType__c</fullName>
        <label>pruneType</label>
        <picklist>
            <picklistValues>
                <fullName>Poda selectiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepa por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepa por surco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>registersPlague_DiseaseCtrlSupplies__c</fullName>
        <label>registersPlague&amp;DiseaseCtrlSupplies</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>renewedCoffeeLastYear__c</fullName>
        <label>renewedCoffeeLastYear</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>safeStorageForSupplies__c</fullName>
        <label>safeStorageForSupplies</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>shadowLevelsNumber__c</fullName>
        <label>shadowLevelsNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signatureURL__c</fullName>
        <label>signatureURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <formula>IMAGE( signatureURL__c , &quot;&quot;, 200, 400)</formula>
        <label>Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soilConservAreaUnits__c</fullName>
        <label>soilConservAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>soilConservationArea__c</fullName>
        <label>soilConservationArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soilConservationPractices__c</fullName>
        <label>soilConservationPractices</label>
        <picklist>
            <picklistValues>
                <fullName>Curvas a nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas individuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas de banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras vivas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras físicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acequias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchon de materia orgánica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realiza ninguna de esas prácticas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>tempWorkersMinimumDailyWage__c</fullName>
        <label>tempWorkersMinimumDailyWage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalFarmAreaUnits__c</fullName>
        <label>totalFarmAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25 x 25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáeras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>totalFarmArea__c</fullName>
        <label>totalFarmArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>turnedForestInCropArea__c</fullName>
        <label>turnedForestInCropArea</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>typeOfCoffeeLastHarvest__c</fullName>
        <label>typeOfCoffeeLastHarvest</label>
        <picklist>
            <picklistValues>
                <fullName>Cereza/uva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino oreado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino seco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>Línea Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>underAgeWorkConditions__c</fullName>
        <label>underAgeWorkConditions</label>
        <picklist>
            <picklistValues>
                <fullName>Van a la escuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No van a la escuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sobrepasan las horas de trabajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ponen en riesgo salud y crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ponen en riego salud y crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores se cumplen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>underagePregnantProtected__c</fullName>
        <label>underagePregnantProtected</label>
        <picklist>
            <picklistValues>
                <fullName>Sí se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>unitForestArea__c</fullName>
        <label>unitForestArea</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>useOfProtApplicationDangSubstances__c</fullName>
        <label>useOfProtApplicationDangSubstances</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, siempre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, pero  si hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>usesLeguminousNitrAbsort__c</fullName>
        <label>usesLeguminousNitrAbsort</label>
        <picklist>
            <picklistValues>
                <fullName>Si utiliza especies leguminosas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No utiliza especies leguminosas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wasteDisposedSafeWay__c</fullName>
        <label>wasteDisposedSafeWay</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>waterBodiesBufferZones__c</fullName>
        <label>waterBodiesBufferZones</label>
        <picklist>
            <picklistValues>
                <fullName>100% de cuerpos de agua permanentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; al 50% de cuerpos de agua permanentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% de cuerpos de agua intermitentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; al 50% de cuerpos de agua intemitentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No existen suficientes z. de amortig.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>weedsControlHerbicides__c</fullName>
        <label>weedsControlHerbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Alaclor (lazo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentaton (Basagram)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendimentalina (Prowl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxifluorfen (Goal o Galigan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluazitop (Fusilade)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holoxitop (Galant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diuron (Karmex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metsulfuron metil (Matancha)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acetoclor (Harmess)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glifosato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>weedsControlMethods__c</fullName>
        <label>weedsControlMethods</label>
        <picklist>
            <picklistValues>
                <fullName>Control físico/mecánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchón material orgánico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancias de siembra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de Sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control químico/herbicidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>workersPaidRegularly__c</fullName>
        <label>workersPaidRegularly</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_Farm</label>
    <listViews>
        <fullName>CBL_Farms</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>farmName__c</columns>
        <columns>Last_FMP_Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Submission__c</columns>
        <columns>signature__c</columns>
        <columns>signatureURL__c</columns>
        <filterScope>Everything</filterScope>
        <label>CBL Farms</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FM-{0000000}</displayFormat>
        <label>CBL_Farm Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_Farms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>